finish chekout
